# djangoSession

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
.github/workflows/: checks.yml
data/db/: postmaster.pid
data/db/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
data/db/base/16384/: 1247  1249  1259  1259_fsm  1259_vm  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16411  16415  16419  16423  16425  16429  16433  16437  16439  16445  16452  16454  16467  16468  16482  16495  16496  16497  16504  16516  16517  16526  16530  16531  16533  (+62 more)
data/db/base/4/: 2619
data/db/base/5/: pg_internal.init
data/db/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
src/app/comments/: apps.py  models.py
src/app/comments/migrations/: 0001_initial.py  0002_alter_comment_user.py
src/app/core/management/commands/: wait_for_db.py
src/app/subscriptions/: apps.py  models.py  serializers.py  urls.py  views.py
src/app/users/: models.py
src/app/users/migrations/: 0001_initial.py
src/app/videos/: apps.py  models.py  serializers.py  urls.py  views.py
src/app/videos/migrations/: 0001_initial.py  0002_alter_video_video_file.py
src/django_session/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
src/django_session/django_session/: settings.py  urls.py  wsgi.py
src/tests/: conftest.py  fixture.py
src/tests/app/users/: test_users.py
src/tests/app/videos/: test_video.py
